--- a/cors.html
+++ b/cors.html
@@ -6,8 +6,8 @@
 $(document).ready(function(){
   $.getJSON( "http://vlinderobservaties.herokuapp.com/data/soorten/", function( data ) {
     var items = [];
-    $.each( data, function( key, val ) {
-      items.push( "<li id='" + key + "'>" + val + "</li>" );
+    $.each( data, function( id,item ) {
+      items.push( "<li id='" + item + "'>" + item.naam_nl + "</li>" );
     });
    
     $( "<ul/>", {
